--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -2,9 +2,15 @@
 <div id="sticky-container"> -->
 <div class="container">
     <world-title></world-title>
+    <p class="paragraphPage">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+    </p>
     <div class="row" >
       <div class="col-sm-12">
         <h4>Reportings available</h4>
+        <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
         <bar-chart 
           ng-data="nbReportings"
           start-date="selectedMinDate"
@@ -22,6 +28,9 @@
     <div class="row">
       <div class="timeline-cont col-sm-12">
         <h4>Import and export evolution of World</h4>
+        <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
         <dual-timeline 
         ng-data="timelineData" 
         start-date="selectedMinDate" 
@@ -85,6 +94,9 @@
 
       <i class="fa fa-info-circle"></i> 
       </h4>
+      <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
         <div ng-show="messagePercent"> 
          <p>
             The percentages are based on the total amount of world sumpartners of {{entities.sourceEntity.selected.RICname}}
