--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -22,9 +22,15 @@
 
 <div class="container">  
   <country-title></country-title>
+  <p class="paragraphPage">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+    </p>
   <div class="row" >
     <div id="countryBrushing" class="col-sm-12">
     <h4>Available years for {{entities.sourceEntity.selected.RICname}}</h4>
+    <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
       <brushing-timeline
         ng-data="timelineData"
         start-date="selectedMinDate"
@@ -62,6 +68,9 @@
 
       </div>
       <h4> Import and export evolution of {{entities.sourceEntity.selected.RICname}}</h4>
+      <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
       <dual-timeline 
         ng-data="timelineData" 
         start-date="selectedMinDate" 
@@ -77,9 +86,13 @@
 <div class="container">
   <h4> Partners trade balance of {{entities.sourceEntity.selected.RICname}}</h4>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
       <h4 class="subtitle">Balance of trade of {{entities.sourceEntity.selected.RICname}} with partners, {{selectedMinDate}} – {{selectedMaxDate}} <i class="fa fa-info-circle"></i></h4>
+      <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
     </div>
+  </div>
     <div class="col-md-6 inline-select" style="float:right;">
         
         <ui-select class="filterSelection" ng-model="filtered.selected" theme="bootstrap" style="float:right;">
@@ -106,7 +119,6 @@
         </ui-select>
           
     </div>
-  </div>
 
 <div id="select-doubleChart">
     <div class="row">
@@ -166,6 +178,9 @@
 
       <i class="fa fa-info-circle"></i> 
       </h4>
+      <p class="paragraphViz">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+        </p>
         <div ng-show="messagePercent"> 
          <p>
             The percentages are based on the total amount of world sumpartners of {{entities.sourceEntity.selected.RICname}}
