country view : download with original currency

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -273,6 +273,9 @@
       <button type="button" ng-click="download()" class="btn">
           Download data
       </button>
+      <button type="button" ng-click="downloadCurrency()" class="btn">
+          Download data with original currency
+      </button>
     </div>
   </div>
   <div ng-if="viewTable" class="row table-cont">
