--- a/client/partials/bilateralTitle.html
+++ b/client/partials/bilateralTitle.html
@@ -7,4 +7,5 @@
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
   to
   <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
+  as reported by {{entities.sourceEntity.selected.RICname}}
 </h4>
