--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -44,7 +44,7 @@
     <p class="paragraphPage">
     </br>
     </br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      La vue bilatérale montre le commerce entre un reporting country et un partner country. Elle précise quelles données miroirs sont disponibles pour le partner country et elle compare la divergence des flux miroirs entre les deux sources disponibles. 
     </p>
     <bilateral-title></bilateral-title>
     <!-- <h4> Import and export evolution of {{entities.sourceEntity.selected.RICname}} with {{entities.targetEntity.selected.RICname}} between {{selectedMinDate}} and {{selectedMaxDate}}</h4> -->
