--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -23,7 +23,7 @@
 <div class="container">  
   <country-title></country-title>
   <p class="paragraphPage">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      La vue pays montre comment le commerce total d’un reporting country se répartit entre ses différents partners. Elle compare les partner entities suivant leur part moyenne dans le commerce total du pays reporting, calcule le solde commercial bilateral annuel et permet de suivre l’évolution du commerce du pays reporting avec ses partners. 
     </p>
   <div class="row" >
     <div id="countryBrushing" class="col-sm-12">
@@ -84,16 +84,45 @@
 
 
 <div class="container">
-  <h4> Partners trade balance of {{entities.sourceEntity.selected.RICname}}</h4>
+  <h4> Partners trade balance of {{entities.sourceEntity.selected.RICname}} sort by
+  <div class="inline-select">   
+      <ui-select ng-model="grouped.selected" theme="bootstrap">
+      <match placeholder="Group by...">{{$select.selected.name.value}}</match>
+      <choices repeat="item in groups | filter: $select.search">
+        <div ng-bind-html="item.name.value | highlight: $select.search"></div>
+      </choices>
+      </ui-select>
+  </div>
+    on
+  <div class="inline-select">
+      <ui-select ng-model="ordered.selected" theme="bootstrap">
+      <match placeholder="Order by...">{{$select.selected.name.value}}</match>
+      <choices repeat="item in orders | filter: $select.search">
+        <div ng-bind-html="item.name.value | highlight: $select.search"></div>
+      </choices>
+      </ui-select>
+  </div>
+    on
+  <div class="inline-select">
+      <ui-select ng-model="filtered.selected" theme="bootstrap">
+      <match placeholder="Filter by...">{{$select.selected.name.value}}</match>
+      <choices repeat="item in filters | filter: $select.search">
+        <div ng-bind-html="item.name.value | highlight: $select.search"></div>
+      </choices>
+      </ui-select>
+  </div>
+   
+  </h4>
   <div class="row">
     <div class="col-md-12">
       <h4 class="subtitle">Balance of trade of {{entities.sourceEntity.selected.RICname}} with partners, {{selectedMinDate}} – {{selectedMaxDate}} <i class="fa fa-info-circle"></i></h4>
       <p class="paragraphViz">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
+           <strong>Balance : </strong> (Exports - Imports) / (Exports total + Imports total)
         </p>
     </div>
   </div>
-    <div class="col-md-6 inline-select" style="float:right;">
+    <!-- <div class="col-md-6 inline-select" style="float:right;">
         
         <ui-select class="filterSelection" ng-model="filtered.selected" theme="bootstrap" style="float:right;">
         <match placeholder="Filter by...">{{$select.selected.name.value}}</match>
@@ -118,7 +147,7 @@
         </choices>
         </ui-select>
           
-    </div>
+    </div> -->
 
 <div id="select-doubleChart">
     <div class="row">
@@ -135,16 +164,24 @@
       </div>
     </div>
         <div class="partnersHistoLegend">
-          <div class="legend-item">
+          <!-- <div class="legend-item">
               {{ordered.selected.name.value}} in <strong>pourcentage</strong> | Trade balance in <strong>sterling</strong>
-          </div>
+          </div> -->
           <div class="legend-item">
-            <strong>Balance : </strong> (Exports - Imports) / (Exports + Imports)
+            <svg height="35" width="300">
+              <circle cx="15" cy="18" r="12" stroke="black" stroke-width="1" fill="transparent" />
+              <circle cx="15" cy="18" r="3" stroke="black" stroke-width="1" fill="black" />
+              <text x="35" y="20" fill="black">Trade share average for available years</text>
+            </svg> 
           </div> 
           <div class="legend-item">
-            <strong>| Total | : </strong> Trade share average for available years
+            <svg height="35" width="300">
+              <rect x="15" y="0" width="10" height="15" style="fill:#cc6666" />
+              <rect x="25" y="15" width="10" height="15" style="fill:#666633" />
+              <text x="40" y="20" fill="black">Commercial Balance</text>
+            </svg> 
           </div> 
-          
+           
         </div>
   </div>
 
