--- a/client/partials/worldTitle.html
+++ b/client/partials/worldTitle.html
@@ -1,5 +1,5 @@
 <h4>
-  Total trade of World
+  World trade
   from
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
   to
