--- a/client/partials/countryTitle.html
+++ b/client/partials/countryTitle.html
@@ -1,5 +1,5 @@
 <h4 class="titleDualTL">
-  Total trade of
+  Total trade of reporting
   <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities"></inline-select-country>
   from
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
